--- a/qr-code-component-main/index.html
+++ b/qr-code-component-main/index.html
@@ -10,26 +10,32 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css" />
 
     <title>Frontend Mentor | QR code component</title>
   </head>
   <body>
-    <div class="qr-code-container">
+    <main>
+      <h1 class="sr-only">QR Card Component</h1>
       <div class="card">
-      <img src="./images/image-qr-code.png" alt="QR Code">
-      <h2>Improve your front-end skills by building projects</h1>
-      <p>
-        Scan the QR code to visit Frontend Mentor and take your coding skills to
-        the next level
-      </p>
+        <img
+          src="./images/image-qr-code.png"
+          alt="QR code to frontendmentor.io"
+        />
+        <div class="text">
+          <h2>Improve your front-end skills by building projects</h2>
+          <p>
+            Scan the QR code to visit Frontend Mentor and take your coding
+            skills to the next level
+          </p>
+        </div>
       </div>
-    </div>
-    <div class="attribution">
-      Challenge by
-      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-        >Frontend Mentor</a
-      >. Coded by <a href="#">Robert Young</a>.
-    </div>
+    </main>
   </body>
+  <footer>
+    Challenge by
+    <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
+      >Frontend Mentor</a
+    >. Coded by <a href="#">Robert Young</a>.
+  </footer>
 </html>
